--- a/project-1-self-service-machine-initial/index.html
+++ b/project-1-self-service-machine-initial/index.html
@@ -16,17 +16,25 @@
         <main id="app">
             <section class="items">
                 <h4>Selecione os produtos</h4>
-                <div class="product" v-for="product in products">
+                <div 
+                class="product" 
+                v-for="product in products" 
+                @click="product.active = !product.active"
+                :class="{selected : product.active}"
+                >
                     <div class="photo">
                         <img :src="product.photo">
                     </div>
                     <div class="description">
                         <span class="name">{{product.name}}</span>
                         <span class="price">{{product.price}}</span>
-                        <div class="quantity-area">
-                            <button>-</button>
+                        <div 
+                        class="quantity-area"
+                        v-if="product.active"
+                        >
+                            <button @click.stop="product.quantity--" :disabled="product.quantity <= 1">-</button>
                             <span class="quantity">{{product.quantity}}</span>
-                            <button>+</button>
+                            <button @click.stop="product.quantity++">+</button>
                         </div>
                     </div>
                 </div>
@@ -43,7 +51,9 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>1x Big Mac</td>
+                            <td
+                            v-for="product in products"
+                            >1x Big Mac</td>
                             <td>5.99</td>
                         </tr>
                         
